--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,26 @@
 {
-    "manifest_version": 3,
-    "name": "Form Filler",
-    "description": "Automatically fills out job applications and other forms using your LinkedIn profile data.",
-    "version": "1.0",
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
-    },
-    "content_scripts": [{}]
-  }
+  "manifest_version": 3,
+  "name": "Form Filler",
+  "description": "Automatically fills out job applications and other forms using your LinkedIn profile data.",
+  "version": "1.0",
+  "permissions": ["activeTab", "scripting", "storage"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "48": "assets/icons/icon48.png",
+      "128": "assets/icons/icon128.png"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.linkedin.com/in/*"],
+      "js": ["content.js"]
+    }
+  ],
+  "options_page": "options.html"
+}
   
