--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Form Filler",
   "description": "Automatically fills out job applications and other forms using your LinkedIn profile data.",
   "version": "1.0",
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["activeTab", "scripting", "storage", "tabs"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -17,10 +17,9 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.linkedin.com/in/*"],
+      "matches": ["https://www.linkedin.com/in/*"],
       "js": ["content.js"]
     }
   ],
   "options_page": "options.html"
 }
-  
