created connect HTML which will open when users are in their linkedIn profile, to add this profile to the extention

--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,11 @@
       "js": ["content.js"]
     }
   ],
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "web_accessible_resources": [
+    {
+      "resources": ["connect.html"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
