added connect LinkedIn button to profile page

--- a/manifest.json
+++ b/manifest.json
@@ -21,11 +21,5 @@
       "js": ["content.js"]
     }
   ],
-  "options_page": "options.html",
-  "web_accessible_resources": [
-    {
-      "resources": ["connect.html"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  "options_page": "options.html"
 }
