--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/in/*"],
+      "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
   ],
